# Rocketry-Software-Suite

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
public/: sw.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  protocol.rs  serial_bridge.rs
src/components/CommandTerminal/: index.tsx
src/components/FloatTracker/: index.tsx
src/components/ForecastingModule/: index.tsx
src/components/GForceGauge/: index.tsx
src/components/HardwareConfig/: ProtocolTester.tsx  RawInspector.tsx  index.tsx
src/components/HealthMatrix/: index.tsx
src/components/Layout/: Sidebar.tsx  StatusBar.tsx
src/components/LiveMap/: CivilOverlays.tsx  NoFlyZones.tsx  index.tsx
src/components/MLInsights/: index.tsx
src/components/MissionControl/: InFlightDashboard.tsx  PreFlightChecklist.tsx  index.tsx
src/components/MissionPlanner/: index.tsx
src/components/PacketDiagnostics/: index.tsx
src/components/ReplayMode/: index.tsx
src/components/RocketView3D/: RocketMesh.tsx  index.tsx
src/components/SerialConnect/: index.tsx
src/components/TMinus/: index.tsx
src/hooks/: useHardwareEvents.ts  useMLPipeline.ts  useReplay.ts  useSerialPort.ts  useWebSocket.ts
src/schemas/: defaultSchema.json
src/store/: hardwareStore.ts  missionStore.ts  mlStore.ts  replayStore.ts  rocketDesignStore.ts  telemetryStore.ts
src/types/: ml.ts  protocol.ts  schema.ts  telemetry.ts
src/utils/: anomalyDetection.ts  forecasting.ts  hardwareFingerprint.ts  openRocket.ts  packetDecoder.ts
(+7 files in other folders)
