[package]
name = "rocketry-software-suite"
version = "0.1.0"
description = "University of Guelph Rocketry Club — Ground Station"
authors = ["University of Guelph Rocketry Club"]
license = "MIT"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
